0025008: wrong PPM generated in mage_AlienPixMap::savePPM